--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -4,12 +4,22 @@
 	<parent>
 		<groupId>com.jdom</groupId>
 		<artifactId>mediadownloader</artifactId>
-		<version>0.0.6</version>
+		<version>0.0.7</version>
 	</parent>
 	<artifactId>integration-tests</artifactId>
 	<packaging>jar</packaging>
 
 	<dependencies>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>util.io</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>mediadownloader.core</artifactId>
@@ -29,7 +39,7 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.jdom</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>util.time</artifactId>
 			<type>test-jar</type>
 			<scope>test</scope>
