--- a/mediadownloader.core/pom.xml
+++ b/mediadownloader.core/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>mediadownloader</artifactId>
 		<groupId>com.jdom</groupId>
-		<version>0.0.6</version>
+		<version>0.0.7</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<artifactId>mediadownloader.core</artifactId>
@@ -42,13 +42,17 @@
 
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>util.io</artifactId>
-			<version>${util.io.version}</version>
+			<artifactId>util.time</artifactId>
 		</dependency>
 
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>util.time</artifactId>
+			<artifactId>util.io</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
 		</dependency>
 
 		<dependency>
@@ -91,18 +95,6 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.jmock</groupId>
-			<artifactId>jmock-junit4</artifactId>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.jmock</groupId>
-			<artifactId>jmock-legacy</artifactId>
 			<scope>test</scope>
 		</dependency>
 
