--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,14 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.jdom</groupId>
 	<artifactId>mediadownloader</artifactId>
-	<version>0.0.7</version>
+	<version>0.0.8</version>
 	<packaging>pom</packaging>
 
 	<properties>
 		<log4j.version>1.2.16</log4j.version>
 		<jdk.compliance.version>1.6</jdk.compliance.version>
 		<junit.version>4.10</junit.version>
+		<powermock.version>1.5</powermock.version>
 		<util.io.version>0.0.1</util.io.version>
 		<util.lang.version>0.0.1</util.lang.version>
 		<util.time.version>0.0.1</util.time.version>
@@ -82,7 +83,7 @@
 				<artifactId>util.io</artifactId>
 				<version>${util.io.version}</version>
 			</dependency>
-			
+
 			<dependency>
 				<groupId>${project.groupId}</groupId>
 				<artifactId>util.lang</artifactId>
@@ -159,6 +160,12 @@
 				<groupId>${project.groupId}</groupId>
 				<artifactId>util.time</artifactId>
 				<version>${util.time.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>${project.groupId}</groupId>
+				<artifactId>util.time</artifactId>
+				<version>${util.time.version}</version>
 				<type>test-jar</type>
 			</dependency>
 
@@ -166,7 +173,18 @@
 				<groupId>org.hsqldb</groupId>
 				<artifactId>hsqldb</artifactId>
 				<version>${hsqldb.version}</version>
-				<scope>test</scope>
+			</dependency>
+
+			<dependency>
+				<groupId>org.powermock</groupId>
+				<artifactId>powermock-module-junit4</artifactId>
+				<version>${powermock.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.powermock</groupId>
+				<artifactId>powermock-api-mockito</artifactId>
+				<version>${powermock.version}</version>
 			</dependency>
 
 		</dependencies>
