--- a/configuration/properties/development.properties
+++ b/configuration/properties/development.properties
@@ -38,14 +38,22 @@ archived.movies.directory=/home/djohnson/Desktop/dev/movies
 # The url to use to find possible nzbs
 series.download.url=http://www.nzbindex.nl/rss/alt.binaries.teevee/?q=@SHOW@&age=@AGE@&sort=agedesc&minsize=100&maxsize=1000&max=250&more=1
 
-# How long to let a download be considered in progress before it will be tried again, in hours
-series.download.time.to.live=3
+# How long to let a series download be considered in progress before it will be tried again
+# Any integer and unit combination, 
+# valid units: NANOSECONDS, MICROSECONDS, MILLISECONDS, SECONDS, MINUTES, HOURS, DAYS
+# 
+#Examples: 2 MINUTES, 10 SECONDS, 500 MILLISECONDS, etc.
+series.download.time.to.live=3 HOURS
 
 # Any text strings that when found in an nzb will cause it to be ignored
 #series.download.title.exclusions=720p
 
-# How long a file should not be touched for it to be considered finished downloading, in minutes
-file.pickup.last.modified=2
+# How long a file should not be touched for it to be considered finished downloading
+# Any integer and unit combination, 
+# valid units: NANOSECONDS, MICROSECONDS, MILLISECONDS, SECONDS, MINUTES, HOURS, DAYS
+# 
+#Examples: 2 MINUTES, 10 SECONDS, 500 MILLISECONDS, etc.
+file.pickup.last.modified=2 MINUTES
 
 # How far back to look for .nzb files
 default.age=30
@@ -53,6 +61,10 @@ default.age=30
 # How far back to look for .nzb files when the tv series has never been downloaded, e.g. season 1, episode 1
 initial.age=700
 
-# How long to sleep between downloading .nzb files, prevents servers considering the system a DOS attack
-# in milliseconds
-sleep.time.between.nzb.downloads=2000
+# How long to sleep between downloading .nzb files, 
+# prevents servers considering the system a denial of service attack.
+# Any integer and unit combination, 
+# valid units: NANOSECONDS, MICROSECONDS, MILLISECONDS, SECONDS, MINUTES, HOURS, DAYS
+# 
+#Examples: 2 MINUTES, 10 SECONDS, 500 MILLISECONDS, etc.
+sleep.time.between.nzb.downloads=2 SECONDS
