--- a/mediadownloader.core/pom.xml
+++ b/mediadownloader.core/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>mediadownloader</artifactId>
 		<groupId>com.jdom</groupId>
-		<version>0.0.12</version>
+		<version>0.0.13</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<artifactId>mediadownloader.core</artifactId>
@@ -35,10 +35,6 @@
 	</build>
 
 	<dependencies>
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-		</dependency>
 
 		<dependency>
 			<groupId>${project.groupId}</groupId>
@@ -48,6 +44,11 @@
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>util.io</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>util.log.log4j</artifactId>
 		</dependency>
 
 		<dependency>
