--- a/pom.xml
+++ b/pom.xml
@@ -4,17 +4,17 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.jdom</groupId>
 	<artifactId>mediadownloader</artifactId>
-	<version>0.0.12</version>
+	<version>0.0.13</version>
 	<packaging>pom</packaging>
 
 	<properties>
-		<log4j.version>1.2.16</log4j.version>
 		<jdk.compliance.version>1.6</jdk.compliance.version>
 		<junit.version>4.10</junit.version>
 		<powermock.version>1.5</powermock.version>
-		<util.io.version>0.0.1</util.io.version>
-		<util.lang.version>0.0.1</util.lang.version>
+		<util.io.version>0.0.2</util.io.version>
+		<util.lang.version>0.0.2</util.lang.version>
 		<util.time.version>0.0.2</util.time.version>
+		<util.log.log4j.version>0.0.1</util.log.log4j.version>
 		<commons-lang3.version>3.1</commons-lang3.version>
 		<commons.io.version>2.1</commons.io.version>
 		<hsqldb.version>2.2.8</hsqldb.version>
@@ -25,6 +25,7 @@
 		<org.springframework.version>3.1.2.RELEASE</org.springframework.version>
 		<maven-compiler-plugin.version>2.3.2</maven-compiler-plugin.version>
 		<maven.jar.plugin.version>2.3.2</maven.jar.plugin.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 	<distributionManagement>
@@ -67,12 +68,6 @@
 		<dependencies>
 
 			<dependency>
-				<groupId>log4j</groupId>
-				<artifactId>log4j</artifactId>
-				<version>${log4j.version}</version>
-			</dependency>
-
-			<dependency>
 				<groupId>commons-io</groupId>
 				<artifactId>commons-io</artifactId>
 				<version>${commons.io.version}</version>
@@ -92,8 +87,8 @@
 
 			<dependency>
 				<groupId>${project.groupId}</groupId>
-				<artifactId>util.time</artifactId>
-				<version>${util.time.version}</version>
+				<artifactId>util.log.log4j</artifactId>
+				<version>${util.log.log4j.version}</version>
 			</dependency>
 
 			<dependency>
