--- a/mediadownloader.core/pom.xml
+++ b/mediadownloader.core/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>mediadownloader</artifactId>
 		<groupId>com.jdom</groupId>
-		<version>0.0.14</version>
+		<version>0.0.15</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<artifactId>mediadownloader.core</artifactId>
@@ -48,7 +48,7 @@
 
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>util.log.log4j</artifactId>
+			<artifactId>util.log.api</artifactId>
 		</dependency>
 
 		<dependency>
