--- a/mediadownloader.executable/pom.xml
+++ b/mediadownloader.executable/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.jdom</groupId>
 		<artifactId>mediadownloader</artifactId>
-		<version>0.0.14</version>
+		<version>0.0.15</version>
 	</parent>
 	<artifactId>mediadownloader.executable</artifactId>
 
@@ -44,6 +44,14 @@
 	</build>
 
 	<dependencies>
+
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>util.log.log4j</artifactId>
+			<version>${util.log.api.version}</version>
+			<scope>runtime</scope>
+		</dependency>
+		
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>mediadownloader.core</artifactId>
