Use base.pom as parent

--- a/pom.xml
+++ b/pom.xml
@@ -2,58 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.jdom</groupId>
+	<parent>
+		<groupId>com.jdom</groupId>
+		<artifactId>base.pom</artifactId>
+		<version>0.0.1</version>
+	</parent>
 	<artifactId>mediadownloader</artifactId>
-	<version>0.0.15</version>
+	<version>0.0.16</version>
 	<packaging>pom</packaging>
-
-	<properties>
-		<jdk.compliance.version>1.6</jdk.compliance.version>
-		<junit.version>4.10</junit.version>
-		<powermock.version>1.5</powermock.version>
-		<util.io.version>0.0.4</util.io.version>
-		<util.lang.version>0.0.2</util.lang.version>
-		<util.time.version>0.0.5</util.time.version>
-		<util.log.api.version>0.0.3</util.log.api.version>
-		<commons-lang3.version>3.1</commons-lang3.version>
-		<commons.io.version>2.1</commons.io.version>
-		<hsqldb.version>2.2.8</hsqldb.version>
-		<mysql.version>5.1.22</mysql.version>
-		<javee.version>6</javee.version>
-		<org.hibernate.version>4.1.9.Final</org.hibernate.version>
-		<org.hibernate.javax.persistence.version>1.0.1.Final</org.hibernate.javax.persistence.version>
-		<org.springframework.version>3.1.2.RELEASE</org.springframework.version>
-		<maven-compiler-plugin.version>2.3.2</maven-compiler-plugin.version>
-		<maven.jar.plugin.version>2.3.2</maven.jar.plugin.version>
-		<maven.shade.plugin.version>2.0</maven.shade.plugin.version>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
-
-	<distributionManagement>
-		<repository>
-			<id>releases</id>
-			<name>Internal Releases</name>
-			<url>${releases.url}</url>
-		</repository>
-		<snapshotRepository>
-			<id>snapshots</id>
-			<name>Internal Snapshots</name>
-			<url>${snapshots.url}</url>
-		</snapshotRepository>
-	</distributionManagement>
-
-	<build>
-		<plugins>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>${maven-compiler-plugin.version}</version>
-				<configuration>
-					<source>${jdk.compliance.version}</source>
-					<target>${jdk.compliance.version}</target>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
 
 	<modules>
 		<module>mediadownloader.core</module>
@@ -61,129 +17,5 @@
 		<module>mediadownloader.executable</module>
 		<module>mediadownloader.series</module>
 	</modules>
-
-	<!-- Defines the standard versions of dependencies that should be used. 
-		They are not added to a project until added to the explicit dependnecies 
-		section in the child module's dependencies. -->
-	<dependencyManagement>
-		<dependencies>
-
-			<dependency>
-				<groupId>commons-io</groupId>
-				<artifactId>commons-io</artifactId>
-				<version>${commons.io.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>${project.groupId}</groupId>
-				<artifactId>util.io</artifactId>
-				<version>${util.io.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>${project.groupId}</groupId>
-				<artifactId>util.lang</artifactId>
-				<version>${util.lang.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>${project.groupId}</groupId>
-				<artifactId>util.log.api</artifactId>
-				<version>${util.log.api.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>org.apache.commons</groupId>
-				<artifactId>commons-lang3</artifactId>
-				<version>${commons-lang3.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>org.hibernate</groupId>
-				<artifactId>hibernate-entitymanager</artifactId>
-				<version>${org.hibernate.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>org.hibernate.javax.persistence</groupId>
-				<artifactId>hibernate-jpa-2.0-api</artifactId>
-				<version>${org.hibernate.javax.persistence.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>mysql</groupId>
-				<artifactId>mysql-connector-java</artifactId>
-				<version>${mysql.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-core</artifactId>
-				<version>${org.springframework.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-beans</artifactId>
-				<version>${org.springframework.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-context</artifactId>
-				<version>${org.springframework.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-orm</artifactId>
-				<version>${org.springframework.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-tx</artifactId>
-				<version>${org.springframework.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>junit</groupId>
-				<artifactId>junit</artifactId>
-				<version>${junit.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>${project.groupId}</groupId>
-				<artifactId>util.time</artifactId>
-				<version>${util.time.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>${project.groupId}</groupId>
-				<artifactId>util.time</artifactId>
-				<version>${util.time.version}</version>
-				<type>test-jar</type>
-			</dependency>
-
-			<dependency>
-				<groupId>org.hsqldb</groupId>
-				<artifactId>hsqldb</artifactId>
-				<version>${hsqldb.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>org.powermock</groupId>
-				<artifactId>powermock-module-junit4</artifactId>
-				<version>${powermock.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>org.powermock</groupId>
-				<artifactId>powermock-api-mockito</artifactId>
-				<version>${powermock.version}</version>
-			</dependency>
-
-		</dependencies>
-	</dependencyManagement>
 
 </project>
