--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.jdom</groupId>
 		<artifactId>mediadownloader</artifactId>
-		<version>0.0.16</version>
+		<version>0.0.17</version>
 	</parent>
 	<artifactId>integration-tests</artifactId>
 
@@ -17,6 +17,11 @@
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>util.io</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>util.log.log4j</artifactId>
 		</dependency>
 
 		<dependency>
