--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
-.classpath
-.project
 .settings/
-target/
-*.*~
+.gradle/
+build/
+bin/
+.project
+.classpath
 app.log*
-dependency-reduced-pom.xml
+*~
