Stop relying on so much custom code

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include 'mediadownloader.core', 'mediadownloader.series', 'integration-tests', 'mediadownloader.executable'
+include 'mediadownloader.core', 'mediadownloader.series', 'integration-tests', 'mediadownloader.executable', 'util.time'
