--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,17 @@
 buildscript {
-    repositories {
-        maven {
-            name 'Gradle Shadow'
-            url 'http://dl.bintray.com/content/johnrengelman/gradle-plugins'
-        }
-    }
-    dependencies {
-        classpath 'org.gradle.plugins:shadow:0.7.4'
-    }
+  repositories { jcenter() }
+  dependencies {
+    classpath 'com.github.jengelman.gradle.plugins:shadow:1.1.1'
+  }
 }
 
-apply plugin: 'shadow'
+apply plugin: 'com.github.johnrengelman.shadow'
+
+allprojects {
+    repositories {
+        mavenCentral()
+    }
+}
     
 subprojects {
 
@@ -30,45 +31,27 @@ subprojects {
    apply plugin: 'java'
    apply plugin: 'maven'
    apply plugin: 'eclipse'
-   apply plugin: 'shadow'
+   apply plugin: 'com.github.johnrengelman.shadow'
 
-   version "0.0.19"
+   version "0.1.0"
    group="com.jdom"
 
-   repositories {
-       maven {
-           credentials {
-              username nexusUsername
-              password nexusPassword
-           }
-           url nexusUrl
-       }
-   }
-
-   uploadArchives {
-       repositories {
-          mavenDeployer {
-             repository(url: releasesUrl) {
-	        authentication(userName: nexusUsername, password: nexusPassword)
-             }
-          }
-       }
-   }
-
    dependencies {
-      shared "com.jdom:util.log.api:0.0.4"
-      shared "com.jdom:util.io:0.0.5"
+      def slf4jVersion = '1.7.7'
+      shared "org.slf4j:slf4j-api:$slf4jVersion"
+      shared "org.slf4j:slf4j-log4j12:$slf4jVersion"
+      shared 'com.google.guava:guava:18.0'
       
       sharedTest "junit:junit:4.11"
       sharedTest "org.powermock:powermock-module-junit4:1.5"
       sharedTest "org.powermock:powermock-api-mockito:1.5"
-      sharedTest group: 'com.jdom', name: 'util.time', version: '0.0.7', classifier: 'tests'
    }
 }
 
 project(':mediadownloader.core') {
     dependencies {
-        compile "com.jdom:util.time:0.0.7"
+        compile project(':util.time')
+        compile 'javax.mail:mail:1.4.7'
         compile "org.apache.commons:commons-lang3:3.1"
         compile "org.hibernate:hibernate-entitymanager:4.1.9.Final"
         compile "org.hibernate.javax.persistence:hibernate-jpa-2.0-api:1.0.1.Final"
@@ -95,28 +78,24 @@ project(':integration-tests') {
         compile "commons-io:commons-io:2.1"
         
         testCompile project(':mediadownloader.core').sourceSets.test.output
-        testCompile "com.jdom:util.log.log4j:0.0.4"
         testCompile "org.hsqldb:hsqldb:2.2.8"
     }
 }
 
 project(':mediadownloader.executable') {
 
-	shadow {
-       artifactAttached = false
+    shadowJar {
+        transform(com.github.jengelman.gradle.plugins.shadow.transformers.AppendingTransformer) {
+            resource = 'META-INF/spring.handlers'
+        }
+        transform(com.github.jengelman.gradle.plugins.shadow.transformers.AppendingTransformer) {
+            resource = 'META-INF/spring.schemas'
+        }
+    }
 
-	   transformer(org.gradle.api.plugins.shadow.transformers.AppendingTransformer) {
-	      resource = 'META-INF/spring.handlers'
-	   }
-	   transformer(org.gradle.api.plugins.shadow.transformers.AppendingTransformer) {
-	      resource = 'META-INF/spring.schemas'
-	   }
-	}
-    
     dependencies {
         runtime project(':mediadownloader.core')
         runtime project(':mediadownloader.series')
-        runtime "com.jdom:util.log.log4j:0.0.4"
         runtime "mysql:mysql-connector-java:5.1.22"
         
         jar {
@@ -128,10 +107,29 @@ project(':mediadownloader.executable') {
     
     // make sure that after creating the jar, the shadow process is run.
 	tasks.getByPath('jar').doLast {
-    	tasks.getByPath('shadow').execute()
+    	tasks.getByPath('shadowJar').execute()
     	
 	}
  }
+
+project(':util.time') {
+    configurations {
+        testArtifacts.extendsFrom testRuntime
+    }
+    task testJar(type: Jar) {
+        classifier "test"
+        from sourceSets.test.output
+    }
+    artifacts {
+        testArtifacts testJar
+    }
+}
+
+configure(subprojects.findAll {it.name != 'util.time'}) {
+    dependencies {
+        sharedTest project(path: ':util.time', configuration: 'testArtifacts')
+    }
+}
 
 task wrapper(type: Wrapper) {
     gradleVersion = '2.1'
