--- a/build.gradle
+++ b/build.gradle
@@ -33,15 +33,15 @@ subprojects {
       }
    }
 
+   apply plugin: 'groovy'
    apply plugin: 'java'
-   apply plugin: 'maven'
-   apply plugin: 'eclipse'
    apply plugin: 'com.github.johnrengelman.shadow'
 
-   version '0.1.1'
+   version '0.2.0'
    group = 'com.jdom'
 
    dependencies {
+      shared 'org.codehaus.groovy:groovy-all:2.3.6'
       shared "org.slf4j:slf4j-api:$slf4jVersion"
       shared "org.slf4j:slf4j-log4j12:$slf4jVersion"
       shared 'com.google.guava:guava:18.0'
@@ -57,7 +57,6 @@ project(':mediadownloader.core') {
       compile project(':util.time')
       compile 'javax.mail:mail:1.4.7'
       compile "org.apache.commons:commons-lang3:3.1"
-      compile "commons-httpclient:commons-httpclient:3.1"
       compile "org.hibernate:hibernate-entitymanager:4.1.9.Final"
       compile "org.hibernate.javax.persistence:hibernate-jpa-2.0-api:1.0.1.Final"
       compile "org.springframework:spring-core:$springVersion"
